trying to make demo work on github

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<script type="text/javascript">
     // load main module of your app with SystemJS
     SystemJS.trace = true;
-    SystemJS.import('src/app');
+    SystemJS.import('"meucongresso/src/app');
   </script>
 	<!-- loading-app:end -->
 </body>
